[tool.poetry]
name = "chatgptapp"
version = "0.1.0"
description = "script para probar el uso de chatGPT"
authors = ["ivtransgruasortiz <ivtransgruasortiz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
